--- a/tutorialAsp.NetCore/Views/Shared/_Layout.cshtml
+++ b/tutorialAsp.NetCore/Views/Shared/_Layout.cshtml
@@ -27,6 +27,31 @@
                         </li>
                     </ul>
                 </div>
+
+            </div>
+            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="AccountManage" asp-action="Index">Аккаунт</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Выход</a>
+                    </li>
+                    </ul>
+                }
+                else
+                {
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Вход</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a>
+                        </li>
+                    </ul>
+                }
             </div>
         </nav>
     </header>
